# hushcrumbs

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Justfile  LICENSE.txt  README.md  build.rs  cliff.toml  funcs.sh  index.html
.github/workflows/: publish.yml  release.yml  rust.yml
coverage/home/runner/work/hushcrumbs/hushcrumbs/src/: config.rs.html  confirm.rs.html  main.rs.html  paths.rs.html
coverage/home/runner/work/hushcrumbs/hushcrumbs/src/subcommand/: add.rs.html  init.rs.html  list.rs.html  restore.rs.html
coverage/master/: index.html
coverage/master/coverage/home/runner/work/hushcrumbs/hushcrumbs/src/: cli.rs.html  config.rs.html  confirm.rs.html  main.rs.html  paths.rs.html
coverage/master/coverage/home/runner/work/hushcrumbs/hushcrumbs/src/subcommand/: add.rs.html  init.rs.html  list.rs.html  remove.rs.html  restore.rs.html
src/: add.rs  cli.rs  config.rs  confirm.rs  init.rs  list.rs  main.rs  paths.rs  prelude.rs  restore.rs  subcommand.rs
src/subcommand/: add.rs  init.rs  list.rs  remove.rs  restore.rs
tests/: add.rs  basic.rs  common.rs  completions.rs  deinit.rs  errors.rs  init.rs  list.rs  mod.rs  remove.rs  restore.rs
