[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
base64 = "0.22.1"
clap = "4.5.17"
dirs = "5.0.1"
env_logger = "0.11.5"
inquire = "0.7.5"
log = "0.4.22"
once_cell = "1.19.0"
predicates = "3.1.2"
prettytable = "0.10.0"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"

[dev-dependencies]
ctor = "0.2.8"
shell-words = "1.1.0"
tempfile = "3.12.0"
